--- a/contact.html
+++ b/contact.html
@@ -66,35 +66,30 @@
                         </li>
                     </ul>
                 </div>
-                <div class="bottom-left">
-                    <div class="profile_description_left">
-                        <h1>Kindergarten Sprout</h1>
-                        <p>Öffnungszeiten: 8.00 - 17.00 Uhr</p>
-                        <p>Sonderöffnungszeiten: 7.30 - 8.00 Uhr</p>
-                        <p>Ganztagskindergarten mit 50 Plätzen</p>
+                <div class="contact_please">
+                    <div class="contact"><h2>Kontakte</h2>
+                        <p><img 
+                            src="telefon.jpg" 
+                            alt="telefon_photo"
+                            class="sind_photo"
+                            > 0491/62332</p>
+                        <p><img 
+                            src="email.png" 
+                            alt="email_photo"
+                            class="sind_photo"
+                            > info@kindergarten-kunterbunt.eu </p>
+                        <p><img 
+                            src="adress.png" 
+                            alt="adress_photo"
+                            class="sind_photo"
+                            > 26789 Leer, Dorfstraße 6</p>
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d591604.5667571469!2d33.29107855527064!3d35.00208929233903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14de1767ca494d55%3A0x324c3c807fc4146e!2z0JrQuNC_0YA!5e0!3m2!1sru!2sde!4v1655557037754!5m2!1sru!2sde" 
+                            width="600" height="450" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
-                </div>
-                <div class="bottom-right">
-                    <div class="search_button">
-                        <form> 
-                            <input type="text" name="text" class="search" placeholder ="Search here!">
-                            <input type="submit" name="submit" class="submit" value="Search">
-                       </form>
-                    </div>
-                    <div class="profile_description_right">
-                        <span>Unsere Leistungen</span>
-                        <p>
-                        Wir bieten eine familienergänzende und familienunterstützende Erziehung, Bildung und Betreuung, wobei wir uns nach dem Niedersächsischen Orientierungsplan richten.
-                        Wir fördern die ganzheitliche Entwicklung der Kinder und bieten hierfür vielfältige Erfahrungs- und Lernräume.
-                        Die Durchführung von Projektarbeit ist eine Form unseres pädagogischen Handelns. Die Kinder erhalten Zugang zu verschiedenen Themen.
-                        Es werden Wissen und Techniken vermittelt, dabei werden die Bedürfnisse und Interessen der Kinder berücksichtigt und es wird ihnen ermöglicht, bei der Planung und dem Verlauf Einfluss zu nehmen.
-                        Wir ermöglichen den Kindern Partizipation, das heißt Kinder werden entsprechend ihrem Entwicklungsstand an allen sie betreffenden Fragen und Entscheidungen beteiligt.
-                        Den Eltern bieten wir eine vertrauensvolle und partnerschaftliche Zusammenarbeit und Mitwirkung an.
-                        Wir beteiligen uns an der Ausbildung des Berufsnachwuchses, indem wir Lernfelder in der sozialpädagogischen Praxis zur Verfügung stellen.
-                        </p>
-                    </div>
-                </div>
-             </div>    
+                </div>     
+            </div>    
         </div>
     </main>
 </body>
