add files Kindergarten

--- a/children.html
+++ b/children.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./children.css">
 </head>
 <body>
     <header class="header">
         <p class="header_heading">
             <a href="./index.html">
                 <img 
-                src="Sprout_logo.svg.png" 
+                src="picture/Sprout_logo.svg.png" 
                 alt="sprout_photo"
                 class="sprout_photo"
                 >
@@ -21,13 +22,10 @@
         <nav class="header_nav">
             <ul class="header_menu">
                 <li class="header_menu_li">
-                    <a href="./kindergarten.html">Kindergarten</a> 
-                </li>
-                <li class="header_menu_li">
                     <a href="./children.html">Kinder</a> 
                 </li>
                 <li class="header_menu_li">
-                   <a href="./eltern.html">Eltern</a> 
+                   <a href="./parents.html">Eltern</a> 
                 </li>
                 <li class="header_menu_li">
                     <a href="./news.html">Neuigkeiten</a> 
@@ -66,7 +64,140 @@
                         </li>
                     </ul>
                 </div>
-             </div>    
+                <div class="corona_block">
+                    <div class="corona_block_inform">
+                        <h2> Corona: Kinder sinnvoll beschäftigen </h2>
+                        <hr>In Zeiten von Corona sind Sie als Eltern besonders gefordert, Ihren Kindern Ideen aufzuzeigen, so dass zu Hause keine Langeweile aufkommt.
+                    </div>
+                    <div class="corona_block_picture_article_shear">
+                        <div class="corona_block_picture_childrens">
+                            <img 
+                            src="picture/childrens.jpg"  
+                            alt="childrens_photo"
+                            class="childrens_photo"
+                            >
+                        </div>
+                        <div class="corona_block_article_share">
+                            <h3>Artikel teilen</h3>
+                                <img 
+                                src="picture/share.png"  
+                                alt="childrens_photo"
+                                class="button_share_picture"
+                                >
+                            <button>Artikel teilen</button>
+                            <p>
+                                <img 
+                                src="picture/printer.png"  
+                                alt="childrens_photo"
+                                class="button_drucken_picture"
+                                >
+                                <button>Seite drucken</button>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="corona_block_list">       
+                        <ul class="corona_block_list_menu">
+                            <li  class="corona_block_header_list_li">
+                                <a href="#sec1">Apps für Kinder</a> 
+                            </li>
+                            <li class="corona_block_header_list_li">
+                                <a href="#sec2">Kindersuchmaschinen</a> 
+                            </li>
+                            <li class="corona_block_header_list_li">
+                                <a href="#sec3">Kinderhörspiele</a> 
+                            </li>
+                            <li class="corona_block_header_list_li">
+                                <a href="#sec4">Kinderradio</a> 
+                            </li>
+                            <li class="corona_block_header_list_li">
+                                <a href="#sec5">Schule Digital</a> 
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="corona_block_text">
+                        <div class="corona_block_apps_for_children" id="sec1">
+                            <h4>
+                                Wir haben Ihnen hier eine Liste mit Medien-Tipps zusammen gestellt. 
+                                Ob Apps, Filmangebote, Podcasts, Hörfunkt oder eine virtuelle Tour 
+                                durch ein Museum: Wie wünschen viel Spaß beim Stöbern durch dieses umfangreiche Angebot!
+                            </h4> 
+                            <h3>Apps für Kinder</h3>
+                            <hr>Das Smartphone oder Tablet ermöglicht den Zugang zu einem unüberschaubaren Angebot an Spielen und Unterhaltung. Da taucht schnell die Frage auf:
+                            <p class="corona_block_apps_for_children_span">Welche Apps sind für mein Kind geeignet?</p>
+                            <p>
+                                Aktuelle Tipps für gute Kinder-Apps finden Sie in der 
+                                <a href="https://www.dji.de/ueber-uns/projekte/projekte/apps-fuer-kinder-angebote-und-trendanalysen/datenbank-apps-fuer-kinder.html">
+                                    <span>Datenbank für Kinder-Apps des Deutschen Jugendinstitus.</span>
+                                </a>
+                            </p>
+                        </div>
+                        <div class="corona_block_apps_for_children_child_search_engines" id="sec2">
+                            <div class="corona_block_apps_for_children_child_search_engines_text">
+                                <h3>Kindersuchmaschinen und weitere geeignete Webseiten für Kinder</h3>
+                                <hr>Für Kinder im Grundschulalter gibt es geeignete Kinderseiten, auf die Sie Ihr Kind hinweisen können: zum Beispiel
+                            </div>
+                            <ul class="corona_block_apps_for_children_child_search_engines_list">
+                                <li class="corona_block_apps_for_children_child_search_engines_list_li">
+                                    <a href="http://www.blinde-kuh.de">Blinde-Kuh</a>
+                                <li class="corona_block_apps_for_children_child_search_engines_list_li">
+                                    <a href="http://www.internet-abc.de">Internet-ABC</a>
+                                </li>    
+                                <li class="corona_block_apps_for_children_child_search_engines_list_li">
+                                    <a href="http://www.frag-finn.de">Frag-Finn</a>
+                                </li>         
+                                <li class="corona_block_apps_for_children_child_search_engines_list_li">
+                                    <a href="https://seitenstark.de/kinder/thema-der-woche/coronavirus">Seitenstark</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="corona_block_children_radio_plays" id="sec3">
+                            <div class="corona_block_children_radio_plays_text">
+                                <h3>Kinderhörspiele</h3>
+                                <hr>
+                                Die Mediatheken der öffentlich-rechtlichen Rundfunksender bieten ein umfangreiches 
+                                Programm an Hörspielen für viele Altersgruppen. Wie z.B. die 
+                                <a href= "https://www.deutschlandfunkkultur.de">
+                                    <span>Hörspiele des Deutschlandfunk</span>
+                                </a> 
+                                oder das 
+                                <a href= "https://www.kakadu.de">
+                                    <span>Kinderradion Kakadu.</span>
+                                </a>                                
+                            </div>
+                        </div> 
+                        <div class="corona_block_children_radio" id="sec4">
+                            <div class="corona_block_children_radio_text">
+                                <h3>Kinderradio</h3>
+                                <hr>
+                                <p>Viele Radio- und TV-Sender bieten aktuell ein erweitertes Programm an.</p>
+                                <span>Die Mikado Sendungen vom NDR bieten 
+                                    <a href= "https://www.ndr.de/nachrichten/info/sendungen/mikado/index.html">Hörspiele, Nachrichten für Kinder,</a>                                     
+                                    Musik und viel Wissenswertes
+                                </span>     
+                                <p>
+                                    <span> Das 
+                                        <a href= "https://www.radioteddy.de">Kinderradio aus Berlin,</a> 
+                                        für die ganze Familie.
+                                    </span>  
+                                </p>                                
+                            </div>
+                        </div>
+                        <div class="corona_block_school_digital" id="sec5">
+                            <div class="corona_block_school_digital_text">
+                                <h3>Schule Digital</h3>
+                                <hr> Das Angebot in den virtuellen Klassenzimmern auf den Internetportalen der großen 
+                                Medienanstalten wurde in den letzten Monaten sehr erweitert. Für jede Altersklasse 
+                                und zu vielen Wissensbereichen findet man jede Menge Lernstoff, Sendungen, Spielangebote 
+                                und Wissensquizze.
+                                <p>
+                                    Eine Auswahl dazu finden Sie in unserem Artikel: 
+                                    <a href= "https://www.deutschlandfunkkultur.de">Schaut euch schlau: Schulfernsehen in Zeiten von Corna.</a>
+                                </p>
+                            </div>
+                        </div>         
+                    </div>
+                </div>
+            </div>    
         </div>
     </main>
 </body>
