--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./contact.css">
 </head>
 <body>
     <header class="header">
         <p class="header_heading">
             <a href="./index.html">
                 <img 
-                src="Sprout_logo.svg.png" 
+                src="picture/Sprout_logo.svg.png" 
                 alt="sprout_photo"
                 class="sprout_photo"
                 >
@@ -21,13 +22,10 @@
         <nav class="header_nav">
             <ul class="header_menu">
                 <li class="header_menu_li">
-                    <a href="./kindergarten.html">Kindergarten</a> 
-                </li>
-                <li class="header_menu_li">
                     <a href="./children.html">Kinder</a> 
                 </li>
                 <li class="header_menu_li">
-                   <a href="./eltern.html">Eltern</a> 
+                   <a href="./parents.html">Eltern</a> 
                 </li>
                 <li class="header_menu_li">
                     <a href="./news.html">Neuigkeiten</a> 
@@ -69,17 +67,17 @@
                 <div class="contact_please">
                     <div class="contact"><h2>Kontakte</h2>
                         <p><img 
-                            src="telefon.jpg" 
+                            src="picture/telefon.jpg" 
                             alt="telefon_photo"
                             class="sind_photo"
                             > 0491/62332</p>
                         <p><img 
-                            src="email.png" 
+                            src="picture/email.png" 
                             alt="email_photo"
                             class="sind_photo"
                             > info@kindergarten-kunterbunt.eu </p>
                         <p><img 
-                            src="adress.png" 
+                            src="picture/adress.png" 
                             alt="adress_photo"
                             class="sind_photo"
                             > 26789 Leer, Dorfstraße 6</p>
