--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css">    
 </head>
 <body>
     <header class="header">
         <p class="header_heading">
             <a href="./index.html">
                 <img 
-                src="Sprout_logo.svg.png" 
+                src="picture/Sprout_logo.svg.png"  
                 alt="sprout_photo"
                 class="sprout_photo"
                 >
@@ -21,13 +21,10 @@
         <nav class="header_nav">
             <ul class="header_menu">
                 <li class="header_menu_li">
-                    <a href="./kindergarten.html">Kindergarten</a> 
-                </li>
-                <li class="header_menu_li">
                     <a href="./children.html">Kinder</a> 
                 </li>
                 <li class="header_menu_li">
-                   <a href="./eltern.html">Eltern</a> 
+                   <a href="./parents.html">Eltern</a> 
                 </li>
                 <li class="header_menu_li">
                     <a href="./news.html">Neuigkeiten</a> 
@@ -39,6 +36,7 @@
                    <a href="./contact.html">Kontakte</a> 
                 </li>
             </ul>
+        </nav>
         </nav>
     </header>
     <main class="main">
