--- a/news.html
+++ b/news.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./news.css">
 </head>
 <body>
     <header class="header">
         <p class="header_heading">
             <a href="./index.html">
                 <img 
-                src="Sprout_logo.svg.png" 
+                src="picture/Sprout_logo.svg.png"  
                 alt="sprout_photo"
                 class="sprout_photo"
                 >
@@ -21,13 +22,10 @@
         <nav class="header_nav">
             <ul class="header_menu">
                 <li class="header_menu_li">
-                    <a href="./kindergarten.html">Kindergarten</a> 
-                </li>
-                <li class="header_menu_li">
                     <a href="./children.html">Kinder</a> 
                 </li>
                 <li class="header_menu_li">
-                   <a href="./eltern.html">Eltern</a> 
+                   <a href="./parents.html">Eltern</a> 
                 </li>
                 <li class="header_menu_li">
                     <a href="./news.html">Neuigkeiten</a> 
