--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 >
             </a>
         </p>
-        <nav class="header_nav">
+        <nav class="header_nav">            
             <ul class="header_menu">
                 <li class="header_menu_li">
                     <a href="./children.html">Kinder</a> 
@@ -30,11 +30,20 @@
                     <a href="./news.html">Neuigkeiten</a> 
                 </li>
                 <li class="header_menu_li">
-                    <a href="./registration.html">Anmeldung</a> 
-                </li>
-                <li class="header_menu_li">
                    <a href="./contact.html">Kontakte</a> 
                 </li>
+                <li class="header_menu_li_log_in">
+                    <a href="./registration.html">
+                        <img 
+                        src="picture/registration.png" 
+                        alt="registration_photo"
+                        class="registration_photo"
+                        >
+                        <br>
+                       <button>Einloggen </button> 
+                    </a>                   
+                    <button>Anmeldung</button>                                    
+                </li>                
             </ul>
         </nav>
         </nav>
@@ -45,7 +54,7 @@
                 <div class="list_main_menu">
                     <ul class="list_menu">
                         <li class="header_list_li">
-                            <a href="">Einstieg in den Kindergarten</a> 
+                            <a href="gallery.html">Gallery</a> 
                         </li>
                         <li class="header_list_li">
                             <a href="">Kindergarten zur Förderung</a> 
