--- a/parents.html
+++ b/parents.html
@@ -31,21 +31,31 @@
                     <a href="./news.html">Neuigkeiten</a> 
                 </li>
                 <li class="header_menu_li">
-                    <a href="./registration.html">Anmeldung</a> 
-                </li>
-                <li class="header_menu_li">
                    <a href="./contact.html">Kontakte</a> 
                 </li>
+                <li class="header_menu_li_log_in">
+                    <a href="./registration.html">
+                        <img 
+                        src="picture/registration.png" 
+                        alt="registration_photo"
+                        class="registration_photo"
+                        >
+                        <br>
+                       <button>Einloggen </button> 
+                    </a>                   
+                    <button>Anmeldung</button>                                    
+                </li>                
             </ul>
+        </nav>
         </nav>
     </header>
     <main class="main">
         <div class="main_profile_info">
-            <div class="profile_info">            
+            <div class="profile_info">
                 <div class="list_main_menu">
                     <ul class="list_menu">
                         <li class="header_list_li">
-                            <a href="">Einstieg in den Kindergarten</a> 
+                            <a href="gallery.html">Gallery</a> 
                         </li>
                         <li class="header_list_li">
                             <a href="">Kindergarten zur Förderung</a> 
@@ -66,8 +76,9 @@
                 </div>
                 <div class="parents">
                     <div class="parents_block">
+                        <h2>Familie hat viele Gesichter</h2>                        
                         <div class="parents_block_father" id="sec1">
-                            <div class="parents_block_father_foto">
+                            <div class="parents_block_father_photo">
                                 <img 
                                 src="picture/father.jpg" 
                                 alt="father_photo"
@@ -87,7 +98,7 @@
                             </div>
                         </div>
                         <div class="parents_block_with_baby_alone" id="sec2">
-                            <div class="parents_block_with_baby_alone_foto">
+                            <div class="parents_block_with_baby_alone_photo">
                                 <img 
                                 src="picture/with_baby_alone.jpg" 
                                 alt="with_baby_alone_photo"
