--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,7 @@
                 >
             </a>
         </p>
-        <nav class="header_nav">
+        <nav class="header_nav">            
             <ul class="header_menu">
                 <li class="header_menu_li">
                     <a href="./children.html">Kinder</a> 
@@ -31,12 +31,22 @@
                     <a href="./news.html">Neuigkeiten</a> 
                 </li>
                 <li class="header_menu_li">
-                    <a href="./registration.html">Anmeldung</a> 
-                </li>
-                <li class="header_menu_li">
                    <a href="./contact.html">Kontakte</a> 
                 </li>
+                <li class="header_menu_li_log_in">
+                    <a href="./registration.html">
+                        <img 
+                        src="picture/registration.png" 
+                        alt="registration_photo"
+                        class="registration_photo"
+                        >
+                        <br>
+                       <button>Einloggen </button> 
+                    </a>                   
+                    <button>Anmeldung</button>                                    
+                </li>                
             </ul>
+        </nav>
         </nav>
     </header>
     <main class="main">
@@ -45,7 +55,7 @@
                 <div class="list_main_menu">
                     <ul class="list_menu">
                         <li class="header_list_li">
-                            <a href="">Einstieg in den Kindergarten</a> 
+                            <a href="gallery.html">Gallery</a> 
                         </li>
                         <li class="header_list_li">
                             <a href="">Kindergarten zur Förderung</a> 
@@ -67,6 +77,7 @@
             <div class="registration_please">    
                 <div class="registration">
                         <h2>Anmeldung</h2>
+                        <hr>
                         <form action="registration_form">
                             <div class="name_surname"> 
                                 <div class="name"> 
